# hermes-orchestrator

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  Dockerfile.fleet-reconciler  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: ADR-001-control-plane-foundation.md
migrations/: env.py
migrations/versions/: 20260713_0001_baseline.py  20260713_0002_agent_policy.py  20260713_0003_task_run_lifecycle.py  20260713_0004_hermes_run_events.py  20260713_0005_fleet_reconcile.py  20260713_0006_usage_budget_ledger.py  20260713_0007_environment_promotion.py  20260713_0008_run_dispatch_leases.py  20260713_0009_observed_runtime_profiles.py  20260713_0010_workflow_continuations.py  20260713_0011_agent_request_lifecycle.py  20260714_0012_disable_spark_profile.py
scripts/: Invoke-HermesAdapterSmoke.ps1  fleet_reconciler.py
src/hermes_orchestrator/: __init__.py  agent_policy.py  api.py  auth.py  config.py  database.py  environment_api.py  environment_services.py  fleet_api.py  fleet_runner.py  fleet_services.py  (+24 more)
tests/: __init__.py  auth_helpers.py  test_agent_policy.py  test_agent_provisioner.py  test_agent_request_lifecycle.py  test_agent_request_policy.py  test_api.py  test_dispatch_leases.py  test_effective_runtime_profiles.py  test_environment_promotion.py  test_fleet_reconciler.py  test_hermes_adapter.py  test_internal_auth.py  test_mcp_parity.py  test_operations_dashboard.py  test_run_dispatcher.py  test_task_state_machine.py  test_usage_budget_ledger.py  test_workflow_continuations.py  test_workflow_coordinator.py
(+12 files in other folders)
